added dummy data and passed them to templates

--- a/professors/templates/professors/prof.html
+++ b/professors/templates/professors/prof.html
@@ -8,7 +8,9 @@
     <div>
         <p>This is prof page</p>
         <a href="https://www.ratemyprofessors.com/professor?tid=2240017">Here</a>
-        <p>Prof id is {{ prof_id }}</p>
+        <p>name: {{ prof.name }}</p>
+        <p>email: {{ prof.email }}</p>
+        <p>avgRate: {{ prof.avgRate }}</p>
     </div>
 
 {% endblock %}
