--- a/professors/templates/professors/search_course.html
+++ b/professors/templates/professors/search_course.html
@@ -1,6 +1,7 @@
 {% extends 'professors/base.html' %}
 {% block content %}
     <div>
-        Searched by subject and course id
+        <p>Here is a list of professors</p>
+        <p><a class="underline text-blue-500" href="{% url 'course_ratings' 1 'CPSC1050' %}">Click one of the professors from list</a></p>
     </div>
 {% endblock %}
