--- a/professors/templates/professors/search_prof.html
+++ b/professors/templates/professors/search_prof.html
@@ -6,13 +6,12 @@
 
     <!-- I'll pass the list of professors with their data -->
     <div>
-        <p>this is result of your search</p>
-        <a href="https://www.ratemyprofessors.com/search/teachers?query=a&sid=U2Nob29sLTQwMTg=">Here</a>
         <p>searched by {{ search_term }}</p>
         {% for prof in results %}
             <p>{{ prof.name }}</p>
             <p>{{ prof.email }}</p>
             <p>{{ prof.avgRate }}</p>
+            <p><a class="underline text-blue-500" href="{% url 'prof_course' 'bita' %}">Click to Jump</a></p>
         {% endfor %}
     </div>
 {% endblock %}
