create function to generate Langara prof

--- a/professors/templates/professors/home.html
+++ b/professors/templates/professors/home.html
@@ -12,7 +12,7 @@
   <p>
     <a
       class="underline text-blue-500"
-      href="{% url 'search_course' 'CPSC' 1050 %}"
+      href="{% url 'search_course' 'CPSC' '1050' %}"
       >Search by course</a
     >
   </p>
