--- a/professors/templates/professors/search_course.html
+++ b/professors/templates/professors/search_course.html
@@ -1,7 +1,10 @@
-{% extends 'professors/base.html' %}
-{% block content %}
-    <div>
-        <p>Here is a list of professors</p>
-        <p><a class="underline text-blue-500" href="{% url 'course_ratings' 1 'CPSC1050' %}">Click one of the professors from list</a></p>
-    </div>
+{% extends 'professors/base.html' %} {% block content %}
+<div>
+  <p>Here is a list of professors</p>
+  <p>
+    <a class="underline text-blue-500" href="{% url 'course_ratings' 2 %}"
+      >Click one of the professors from list</a
+    >
+  </p>
+</div>
 {% endblock %}
