passed data for search prof page

--- a/professors/templates/professors/course_ratings.html
+++ b/professors/templates/professors/course_ratings.html
@@ -1,7 +1,7 @@
 {% extends 'professors/base.html' %} {% block content %}
 <!-- This is couse ratings page (Ryota)  -->
 
-<!-- 
+<!-- given data
 professor: string
 school: string
 course: string
