--- a/professors/templates/professors/search_course.html
+++ b/professors/templates/professors/search_course.html
@@ -1,10 +1,19 @@
 {% extends 'professors/base.html' %} {% block content %}
+
+<!-- given data
+results: Course[]
+-->
 <div>
   <p>Here is a list of professors</p>
+  {% for result in results %}
   <p>
-    <a class="underline text-blue-500" href="{% url 'course_ratings' 2 %}"
-      >Click one of the professors from list</a
+    <a
+      class="underline text-blue-500"
+      href="{% url 'course_ratings' result.id %}"
+      >{{ result.professor.name}}</a
     >
   </p>
+  {% endfor %}
 </div>
+
 {% endblock %}
