show all results on search_course.html

--- a/professors/templates/professors/search_course.html
+++ b/professors/templates/professors/search_course.html
@@ -4,13 +4,14 @@
 results: Course[]
 -->
 <div>
-  <p>Here is a list of professors</p>
+  <p>Here is a list of courses</p>
   {% for result in results %}
   <p>
     <a
       class="underline text-blue-500"
       href="{% url 'course_ratings' result.id %}"
-      >{{ result.professor.name}}</a
+      >{{ result.professor.name}}-{{ result.subject }}
+      {{result.course_number}}</a
     >
   </p>
   {% endfor %}
