--- a/professors/templates/professors/home.html
+++ b/professors/templates/professors/home.html
@@ -2,8 +2,16 @@
 <!-- Landing Page (Mina) -->
 {% load static %}
 <div>
+  <!--prettier-ignore-->
+  {% if messages %} {% for message in messages %}
+  <p class="text-red-500">{{ message }}</p>
+  {% endfor %} {%endif %}
   <p>This is landing page</p>
   <img src="{% static "admin/img/icon-clock.svg" %}" width="50px">
+  <!--prettier-->
+  {% if user.is_authenticated %}
+  <p>You're logged in {{ user.username }}</p>
+  {% endif %}
   <p>
     <a class="underline text-blue-500" href="{% url 'search_prof' 'bita' %}"
       >Search by professor's name bita</a
